fixing design to be responsive on mobile

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ header {
     border-color: #8CCB5C;
     color: #fff;
     transition: background-color 0.3s ease;
+    margin-bottom: 2rem;
 }
 
 .custom-btn:hover {
